# RemoteWork

./: .gitignore  CLAUDE.md  LICENSE  README.ko.md  README.md  docker-compose.yml  render.yaml
.claude/: settings.local.json
.claude/skills/be-engineer/: SKILL.md
.claude/skills/cbo/: SKILL.md
.claude/skills/cto/: SKILL.md
.claude/skills/designer/: SKILL.md
.claude/skills/fe-engineer/: SKILL.md
.claude/skills/po/: SKILL.md
.claude/skills/qa/: SKILL.md
.github/workflows/: ci.yml  release.yml
.tycono/: coins.json  custom-rules.md  preferences.json  quest-progress.json
architecture/: architecture.md
company/: company.md
coturn/: turnserver.conf
deploy/: .env.example  Dockerfile.web  README.md  docker-compose.yml  init-letsencrypt.sh  nginx.conf.template  turnserver.conf
docs/: 01_PROJECT_OVERVIEW.md  02_PHASE_PLAN.md  03_SUBAGENT_STRATEGY.md  04_SETUP_AND_BUILD.md
host-agent/: Cargo.toml
host-agent/crates/audio/: Cargo.toml
host-agent/crates/audio/src/: capture.rs  decoder.rs  encoder.rs  lib.rs  playback.rs
host-agent/crates/auth/: Cargo.toml
host-agent/crates/auth/src/: lib.rs
host-agent/crates/capture/: Cargo.toml
host-agent/crates/capture/src/: capturer.rs  encoder.rs  frame.rs  lib.rs
host-agent/crates/file_transfer/: Cargo.toml
host-agent/crates/file_transfer/src/: fs_access.rs  lib.rs  receiver.rs  sender.rs
host-agent/crates/input/: Cargo.toml
host-agent/crates/input/src/: handler.rs  keyboard.rs  lib.rs  mouse.rs  types.rs
host-agent/crates/network/: Cargo.toml
host-agent/crates/network/src/: data_channel.rs  lib.rs  peer_connection.rs  signaling_client.rs
host-agent/crates/proto/: Cargo.toml  build.rs
host-agent/crates/proto/src/: lib.rs
host-agent/src/: app.rs  config.rs  main.rs  tray.rs  ui.rs
knowledge/: knowledge.md
methodologies/: agentic-knowledge-base.md  methodologies.md
operations/activity-streams/: ses-ceo-1773922588227.jsonl
operations/cost/: token-ledger.jsonl
operations/waves/: wave-1773922499553.json
projects/: projects.md
proto/: chat.proto  file_transfer.proto  input.proto  messages.proto
roles/: roles.md
roles/be-engineer/: profile.md  role.yaml
roles/cbo/: profile.md  role.yaml
roles/cto/: profile.md  role.yaml
roles/designer/: profile.md  role.yaml
roles/fe-engineer/: profile.md  role.yaml
roles/po/: profile.md  role.yaml
roles/qa/: profile.md  role.yaml
signaling-server/: Cargo.toml  Dockerfile  build.rs
signaling-server/src/: auth.rs  json_protocol.rs  main.rs  relay.rs  session_registry.rs  ws_server.rs
viewer-client/: .env.example  electron-builder.yml  electron-vite.config.ts  index.html  package-lock.json  package.json
viewer-client/electron/: main.ts  preload.ts
viewer-client/resources/: icon.icns
viewer-client/scripts/: generate-icons.mjs
viewer-client/src/: App.tsx  index.css  vite-env.d.ts
viewer-client/src/components/: ChatPanel.tsx  ConnectionDialog.tsx  FileTransfer.tsx  RemoteScreen.tsx  SessionStatusOverlay.tsx  Toolbar.tsx  UpdateBanner.tsx
viewer-client/src/core/: chat.ts  connection.ts  file-transfer.ts  input-sender.ts  peer-connection.ts  signaling.ts
viewer-client/src/hooks/: useIdleTimeout.ts
viewer-client/src/stores/: chat-store.ts  connection-store.ts  file-transfer-store.ts
