[workspace]
members = [
    ".",
    "crates/capture",
    "crates/input",
    "crates/network",
    "crates/file_transfer",
    "crates/auth",
    "crates/proto",
    "crates/audio",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
rand = "0.8"
webrtc = "0.11"
cpal = "0.15"
opus = "0.3"

[package]
name = "host-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "host-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
webrtc = { workspace = true }
dirs = "5"
tray-icon = "0.14"
capture = { path = "crates/capture" }
input = { path = "crates/input" }
network = { path = "crates/network" }
file_transfer = { path = "crates/file_transfer" }
auth = { path = "crates/auth" }
proto = { path = "crates/proto" }
audio = { path = "crates/audio" }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
