[package]
name = "file_transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
hex = "0.4"
prost = { workspace = true }
proto = { path = "../proto" }
